# WINUI3-loopback_manager

./: .gitignore  README.md  pubspec.yaml  slang.yaml
.github/workflows/: auto-update-deps.yml  build-release.yml  daily-build.yml  flutter-checks.yml  rust-checks.yml
lib/: main.dart
lib/i18n/: en.i18n.json  zh_CN.i18n.json
lib/models/: app_container.dart
lib/providers/: app_provider.dart
lib/services/: loopback_service.dart
lib/ui/components/: app_container_list.dart
lib/ui/pages/: home_page.dart
lib/utils/: logger.dart
lib/widgets/: title_bar.dart
native/hub/: Cargo.toml
native/hub/src/: lib.rs  loopback.rs
native/hub/src/loopback/: api.rs  messages.rs
native/hub/src/utils/: init_logger.rs
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
