[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
async-trait = "0.1.87"
messages = "0.3.1"
log = "0.4"
env_logger = "0.11"
once_cell = "1.20"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_System_Memory",
] }

[build-dependencies]
rinf = "8.7.2"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"